--- a/index.html
+++ b/index.html
@@ -2,92 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Game Developer Portfolio - Unreal Engine & C++</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Name | Unreal Game Developer</title>
+  <style>
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #0e0e0e;
+      color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #1f1f1f;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #aaa;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .tech-stack {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .tech {
+      background: #2c2c2c;
+      padding: 15px 25px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .project-card {
+      background: #1a1a1a;
+      border: 1px solid #333;
+      border-radius: 8px;
+      padding: 20px;
+      transition: transform 0.2s ease;
+    }
+    .project-card:hover {
+      transform: translateY(-5px);
+    }
+    .project-title {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+    }
+    .project-desc {
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #666;
+      background: #101010;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #00afff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>John Doe</h1>
-      <p>Unreal Engine Developer | C++ Programmer</p>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
+    <h1>Your Name</h1>
+    <p>Game Developer | Unreal Engine | C++ | Blueprints</p>
   </header>
 
-  <section id="hero">
-    <div class="container">
-      <h2>Crafting immersive experiences with Unreal Engine and C++</h2>
-      <p>From gameplay systems to AI, I bring ideas to life through code and design.</p>
+  <section>
+    <h2>Tech Stack</h2>
+    <div class="tech-stack">
+      <div class="tech">Unreal Engine</div>
+      <div class="tech">C++</div>
+      <div class="tech">Blueprints</div>
+      <div class="tech">GitHub</div>
+      <div class="tech">Diversion</div>
     </div>
   </section>
 
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        I'm a game developer specializing in Unreal Engine and C++. My experience ranges from solo indie projects to collaborating with small teams on gameplay mechanics, AI systems, and performance optimization. I thrive in the intersection of technical precision and creative design.
-      </p>
-    </div>
-  </section>
-
-  <section id="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      
-      <div class="project">
-        <img src="images/project1.jpg" alt="Project 1 Thumbnail">
-        <div>
-          <h3>Dark Horizon</h3>
-          <p>First-person shooter built in Unreal Engine 5. Developed core gameplay systems, including shooting mechanics, AI, and HUD using C++ and Blueprints.</p>
-        </div>
+  <section>
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="project-card">
+        <div class="project-title">Project Title 1</div>
+        <div class="project-desc">Short description of the game project. Mention tools used like UE5, Blueprints, or C++.</div>
       </div>
-
-      <div class="project">
-        <img src="images/project2.jpg" alt="Project 2 Thumbnail">
-        <div>
-          <h3>Echo Protocol</h3>
-          <p>Stealth-action game featuring dynamic sound-based AI. Designed behavior trees and custom C++ components to drive intelligent enemy behavior.</p>
-        </div>
+      <div class="project-card">
+        <div class="project-title">Project Title 2</div>
+        <div class="project-desc">Another short summary. What you built, what problem you solved, or what you're experimenting with.</div>
       </div>
-
+      <!-- Add more projects as needed -->
     </div>
   </section>
 
-  <section id="skills">
-    <div class="container">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>C++ (5+ years)</li>
-        <li>Unreal Engine (UE4 & UE5)</li>
-        <li>Gameplay Programming</li>
-        <li>Blueprint Scripting</li>
-        <li>AI (Behavior Trees, EQS)</li>
-        <li>Networking (Multiplayer)</li>
-        <li>Performance Optimization</li>
-        <li>Version Control (Git)</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Email: johndoe@example.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
-      <p>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></p>
-    </div>
+  <section>
+    <h2>GitHub</h2>
+    <p>Check out my code and experiments on <a href="https://github.com/YOUR_USERNAME" target="_blank">GitHub</a>.</p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 John Doe. Unreal Engine & C++ Portfolio.</p>
-    </div>
+    &copy; 2025 Your Name. All rights reserved.
   </footer>
 </body>
 </html>
