--- a/index.html
+++ b/index.html
@@ -2,91 +2,186 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Name | Unreal Game Developer</title>
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #0e0e0e;
-      color: #f4f4f4;
-      margin: 0;
-      padding: 0;
+    :root {
+      --bg: #0e0e0e;
+      --card-bg: #1a1a1a;
+      --accent: #00afff;
+      --text: #f4f4f4;
+      --muted: #aaa;
+      --border: #2c2c2c;
+      --font: 'Segoe UI', sans-serif;
     }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: var(--font);
+      background-color: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
     header {
-      background: #1f1f1f;
-      padding: 40px 20px;
+      background: linear-gradient(135deg, #111, #1f1f1f);
+      padding: 60px 20px 40px;
       text-align: center;
     }
+
     header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 10px;
     }
+
     header p {
       font-size: 1.2rem;
-      color: #aaa;
+      color: var(--muted);
     }
+
     section {
-      padding: 40px 20px;
+      padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
     }
+
+    h2 {
+      font-size: 2rem;
+      border-bottom: 2px solid var(--border);
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+    }
+
     .tech-stack {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
+      gap: 15px;
     }
+
     .tech {
-      background: #2c2c2c;
-      padding: 15px 25px;
+      background: var(--card-bg);
+      padding: 12px 20px;
       border-radius: 8px;
-      font-weight: bold;
+      border: 1px solid var(--border);
+      font-weight: 500;
     }
+
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
     }
+
     .project-card {
-      background: #1a1a1a;
-      border: 1px solid #333;
-      border-radius: 8px;
+      background: var(--card-bg);
+      border: 1px solid var(--border);
+      border-radius: 10px;
       padding: 20px;
-      transition: transform 0.2s ease;
+      transition: transform 0.2s ease, border 0.2s ease;
     }
+
     .project-card:hover {
       transform: translateY(-5px);
+      border-color: var(--accent);
     }
+
     .project-title {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
+      font-size: 1.3rem;
+      margin-bottom: 8px;
+      color: var(--accent);
     }
+
     .project-desc {
       font-size: 0.95rem;
-      color: #ccc;
+      color: var(--muted);
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #666;
-      background: #101010;
-      font-size: 0.9rem;
+
+    .about {
+      background-color: #121212;
+      border-radius: 10px;
+      padding: 30px;
+      line-height: 1.8;
     }
+
+    .about p {
+      margin-bottom: 1em;
+    }
+
+    .contact-form {
+      background-color: var(--card-bg);
+      padding: 30px;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+    }
+
+    .contact-form label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 6px;
+      border: 1px solid var(--border);
+      background-color: #101010;
+      color: var(--text);
+    }
+
+    .contact-form button {
+      background-color: var(--accent);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .contact-form button:hover {
+      background-color: #008acc;
+    }
+
     a {
-      color: #00afff;
+      color: var(--accent);
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      background: #101010;
+      color: var(--muted);
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Your Name</h1>
-    <p>Game Developer | Unreal Engine | C++ | Blueprints</p>
+    <p>Game Developer | Unreal Engine • C++ • Blueprints</p>
   </header>
+
+  <section>
+    <h2>About Me</h2>
+    <div class="about">
+      <p>Hello! I'm a passionate game developer specializing in Unreal Engine development using both Blueprints and C++. I love building immersive gameplay systems, experimenting with mechanics, and optimizing workflows for teams using Diversion and GitHub.</p>
+      <p>From prototypes to full games, I'm all about clean code, performance, and engaging design. Let's build something fun!</p>
+    </div>
+  </section>
 
   <section>
     <h2>Tech Stack</h2>
@@ -103,24 +198,42 @@
     <h2>Projects</h2>
     <div class="projects">
       <div class="project-card">
-        <div class="project-title">Project Title 1</div>
-        <div class="project-desc">Short description of the game project. Mention tools used like UE5, Blueprints, or C++.</div>
+        <div class="project-title">Project One</div>
+        <div class="project-desc">An action platformer developed in UE5 using C++ and Blueprints. Features dynamic combat, AI behavior trees, and a custom UI system.</div>
       </div>
       <div class="project-card">
-        <div class="project-title">Project Title 2</div>
-        <div class="project-desc">Another short summary. What you built, what problem you solved, or what you're experimenting with.</div>
+        <div class="project-title">Project Two</div>
+        <div class="project-desc">Multiplayer shooter prototype built with Unreal Networking and GitHub versioning via Diversion. Focused on performance and replication optimization.</div>
       </div>
-      <!-- Add more projects as needed -->
+    </div>
+  </section>
+
+  <section>
+    <h2>Contact Me</h2>
+    <div class="contact-form">
+      <form action="mailto:your.email@example.com" method="POST" enctype="text/plain">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="Name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="Email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="Message" rows="6" required></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
     </div>
   </section>
 
   <section>
     <h2>GitHub</h2>
-    <p>Check out my code and experiments on <a href="https://github.com/YOUR_USERNAME" target="_blank">GitHub</a>.</p>
+    <p>Check out my repositories and tools on <a href="https://github.com/YOUR_USERNAME" target="_blank">GitHub</a>.</p>
   </section>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Your Name — Game Developer. All rights reserved.
   </footer>
+
 </body>
 </html>
