Added title cards for projects

--- a/index.html
+++ b/index.html
@@ -197,15 +197,16 @@
   <section>
     <h2>Projects</h2>
     <div class="projects">
-      <div class="project-card">
-        <div class="project-title">Project One</div>
-        <div class="project-desc">An action platformer developed in UE5 using C++ and Blueprints. Features dynamic combat, AI behavior trees, and a custom UI system.</div>
-      </div>
-      <div class="project-card">
-        <div class="project-title">Project Two</div>
-        <div class="project-desc">Multiplayer shooter prototype built with Unreal Networking and GitHub versioning via Diversion. Focused on performance and replication optimization.</div>
-      </div>
-    </div>
+  <a href="project1.html" class="project-card">
+    <div class="project-title">Project One</div>
+    <div class="project-desc">An action platformer developed in UE5 using C++ and Blueprints.</div>
+  </a>
+  <a href="project2.html" class="project-card">
+    <div class="project-title">Project Two</div>
+    <div class="project-desc">Multiplayer prototype with replication and performance focus.</div>
+  </a>
+</div>
+
   </section>
 
   <section>
