--- a/project1.html
+++ b/project1.html
@@ -78,7 +78,7 @@
     </ul>
 
     <h2>Media</h2>
-    <img src="images/project1-screenshot.jpg" alt="Project Screenshot" class="screenshot">
+    <img src="images/project1-screenshot.png" alt="Project Screenshot" class="screenshot">
 
     <h2>Code & Demo</h2>
     <p>
