--- a/project1.html
+++ b/project1.html
@@ -1,97 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project One | Your Name</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #0e0e0e;
-      color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
-
-    header, footer {
-      text-align: center;
-      background: #101010;
-      padding: 30px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-
-    h2 {
-      color: #00afff;
-      margin-bottom: 10px;
-    }
-
-    .back-link {
-      margin-top: 20px;
-      display: inline-block;
-      color: #00afff;
-      text-decoration: none;
-    }
-
-    .back-link:hover {
-      text-decoration: underline;
-    }
-
-    .screenshot {
-      max-width: 100%;
-      border: 1px solid #333;
-      border-radius: 6px;
-      margin-top: 20px;
-    }
-
-    a {
-      color: #00afff;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project One | Your Name</title>
+    <link rel="stylesheet" href="project-styles.css">
 </head>
+
 <body>
 
-  <header>
-    <h1>Project One</h1>
-    <p>Action Platformer | Unreal Engine | C++ | Blueprints</p>
-  </header>
+    <header>
+        <h1>Project One</h1>
+        <p>Action Platformer | Unreal Engine | C++ | Blueprints</p>
+    </header>
 
-  <main>
-    <h2>Overview</h2>
-    <p>This is a fast-paced action platformer built in Unreal Engine 5 using C++ and Blueprints. Core mechanics include double-jump, enemy AI, and level transitions.</p>
+    <main>
+        <section class="overview">
+            <h2>Overview</h2>
+            <p>This is a fast-paced action platformer built in Unreal Engine 5 using C++ and Blueprints. Core mechanics
+                include double-jump, enemy AI, and level transitions with a focus on smooth gameplay and responsive
+                controls.</p>
+        </section>
 
-    <h2>Key Features</h2>
-    <ul>
-      <li>Custom movement controller in C++</li>
-      <li>Enemy AI using behavior trees</li>
-      <li>Dynamic camera system with shake & zoom</li>
-    </ul>
+        <section class="features">
+            <h2>Key Features</h2>
+            <div class="feature-grid">
+                <div class="feature-item">
+                    <h3>Custom Movement Controller</h3>
+                    <p>Built in C++ for precise character control and responsiveness</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Enemy AI System</h3>
+                    <p>Advanced behavior trees for intelligent enemy interactions</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Dynamic Camera System</h3>
+                    <p>Smooth camera transitions with shake and zoom effects</p>
+                </div>
+            </div>
+        </section>
 
-    <h2>Media</h2>
-    <img src="images/project1-screenshot.png" alt="Project Screenshot" class="screenshot">
+        <section class="media">
+            <h2>Media</h2>
+            <div class="media-container">
+                <div class="placeholder-image">
+                    <span>Project Screenshot</span>
+                    <p>Game footage and screenshots would be displayed here</p>
+                </div>
+            </div>
+        </section>
 
-    <h2>Code & Demo</h2>
-    <p>
-      View source on <a href="https://github.com/YOUR_USERNAME/project-one" target="_blank">GitHub</a><br>
-      Watch demo on <a href="https://youtu.be/YOUR_DEMO" target="_blank">YouTube</a>
-    </p>
+        <section class="links">
+            <h2>Code & Demo</h2>
+            <div class="link-buttons">
+                <a href="https://github.com/YOUR_USERNAME/project-one" target="_blank" class="btn btn-github">
+                    <span>View on GitHub</span>
+                </a>
+                <a href="https://youtu.be/YOUR_DEMO" target="_blank" class="btn btn-demo">
+                    <span>Watch Demo</span>
+                </a>
+            </div>
+        </section>
 
-    <a class="back-link" href="index.html">&larr; Back to Portfolio</a>
-  </main>
+        <a class="back-link" href="index.html">
+            <span>&larr; Back to Portfolio</span>
+        </a>
+    </main>
 
-  <footer>
-    &copy; 2025 Your Name
-  </footer>
+    <footer>
+        &copy; 2025 Your Name — Game Developer
+    </footer>
 
+    <script src="project-script.js"></script>
 </body>
+
 </html>
