--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Unreal Game Developer</title>
+  <title>Ishan Goel | Unreal Game Developer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header>
-    <h1>Your Name</h1>
+    <h1>Ishan Goel</h1>
     <p>Game Developer | Unreal Engine • C++ • Blueprints</p>
   </header>
 
   <section>
     <h2>About Me</h2>
     <div class="about">
-      <p>Hello! I'm a passionate game developer specializing in Unreal Engine development using both Blueprints and C++. I love building immersive gameplay systems, experimenting with mechanics, and optimizing workflows for teams using Diversion and GitHub.</p>
-      <p>From prototypes to full games, I'm all about clean code, performance, and engaging design. Let's build something fun!</p>
+      <p>I'm a passionate game developer specializing in Unreal Engine 5 using both C++ and Blueprints. I love building immersive gameplay systems, experimenting with mechanics, and optimizing workflows for teams using source control like GitHub and Diversion.</p>
+      <p>From prototypes to full games, I'm all about clean code, performance, best practices and engaging design. Let's build something fun!</p>
     </div>
   </section>
 
@@ -36,12 +36,12 @@
     <h2>Projects</h2>
     <div class="projects">
       <a href="project1.html" class="project-card">
-        <div class="project-title">Project One</div>
-        <div class="project-desc">An action platformer developed in UE5 using C++ and Blueprints.</div>
+        <div class="project-title">Simple Shooter</div>
+        <div class="project-desc">A simple third person shooter developed in UE5 using C++ and Blueprints.</div>
       </a>
       <a href="project2.html" class="project-card">
-        <div class="project-title">Project Two</div>
-        <div class="project-desc">Multiplayer prototype with replication and performance focus.</div>
+        <div class="project-title">Size Matters</div>
+        <div class="project-desc">A short demo inspired by Portal where the player must shrink objects to solve various puzzles.</div>
       </a>
     </div>
   </section>
@@ -66,11 +66,11 @@
 
   <section>
     <h2>GitHub</h2>
-    <p>Check out my repositories and tools on <a href="https://github.com/YOUR_USERNAME" target="_blank">GitHub</a>.</p>
+    <p>Check out my repositories and tools on <a href="https://github.com/LZProgrammerIG" target="_blank">GitHub</a>.</p>
   </section>
 
   <footer>
-    &copy; 2025 Your Name — Game Developer. All rights reserved.
+    &copy; 2025 Ishan Goel — Game Developer. All rights reserved.
   </footer>
 
   <script src="script.js"></script>
