Updated images on Project 2

--- a/project2.html
+++ b/project2.html
@@ -51,11 +51,11 @@
             <h2>Media</h2>
             <div class="media-container">
                 <div class="placeholder-image">
-                    <img src="images/SizeMatters-Screenshot1" alt="Main Menu image">
-                    <img src="images/SizeMatters-Screenshot2" alt="Cube on a platform image">
-                    <img src="images/SizeMatters-Screenshot3" alt="Instruction board image">
-                    <img src="images/SizeMatters-Screenshot4" alt="Laser Level image">
-                    <img src="images/SizeMatters-Screenshot5" alt="Cube Spawner image">
+                    <img src="images/SizeMatters-Screenshot1.png" alt="Main Menu image">
+                    <img src="images/SizeMatters-Screenshot2.png" alt="Cube on a platform image">
+                    <img src="images/SizeMatters-Screenshot3.png" alt="Instruction board image">
+                    <img src="images/SizeMatters-Screenshot4.png" alt="Laser Level image">
+                    <img src="images/SizeMatters-Screenshot5.png" alt="Cube Spawner image">
                     
                 </div>
             </div>
