--- a/project2.html
+++ b/project2.html
@@ -68,6 +68,11 @@
                     <span>Watch Demo</span>
                 </a>
             </div>
+            <div class="link-buttons">
+                <a href="https://maged-ahmed.itch.io/size-matters" target="_blank" class="btn btn-demo">
+                    <span>Play Demo</span>
+                </a>
+            </div>
         </section>
 
         <a class="back-link" href="index.html">
