--- a/project1.html
+++ b/project1.html
@@ -53,12 +53,14 @@
 
         <section class="media">
             <h2>Media</h2>
-            <div class="media-container">
-                <div class="placeholder-image">
-                    <img src="images/SimpleShooter-facility.png" alt="Facility image">
-                    <img src="images/SimpleShooter-ControlRoom.png" alt="Control Room image">
-                    <img src="images/SimpleShooter-SpawnLocation.png" alt="Spawn Location image">
+            <div class="carousel-container">
+                <div class="carousel-track">
+                    <img src="nissa.jpg" alt="Screenshot 1" class="carousel-image">
+                    <img src="screenshot2.jpg" alt="Screenshot 2" class="carousel-image">
+                    <img src="screenshot3.jpg" alt="Screenshot 3" class="carousel-image">
                 </div>
+                <button class="carousel-button prev">&#10094;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
