--- a/project1.html
+++ b/project1.html
@@ -55,9 +55,9 @@
             <h2>Media</h2>
             <div class="carousel-container">
                 <div class="carousel-track">
-                    <img src="nissa.jpg" alt="Screenshot 1" class="carousel-image">
-                    <img src="screenshot2.jpg" alt="Screenshot 2" class="carousel-image">
-                    <img src="screenshot3.jpg" alt="Screenshot 3" class="carousel-image">
+                    <img src="../images/SimpleShooter-ControlRoom.png" alt="Screenshot 1" class="carousel-image">
+                    <img src="../images/SimpleShooter-SpawnLocation.png" alt="Screenshot 2" class="carousel-image">
+                    <img src="../images/SimpleShooter-facility.png" alt="Screenshot 3" class="carousel-image">
                 </div>
                 <button class="carousel-button prev">&#10094;</button>
                 <button class="carousel-button next">&#10095;</button>
