--- a/project2.html
+++ b/project2.html
@@ -49,15 +49,16 @@
 
         <section class="media">
             <h2>Media</h2>
-            <div class="media-container">
-                <div class="placeholder-image">
+            <div class="carousel-container">
+                <div class="carousel-track">
                     <img src="images/SizeMatters-Screenshot1.png" alt="Main Menu image">
                     <img src="images/SizeMatters-Screenshot2.png" alt="Cube on a platform image">
                     <img src="images/SizeMatters-Screenshot3.png" alt="Instruction board image">
                     <img src="images/SizeMatters-Screenshot4.png" alt="Laser Level image">
                     <img src="images/SizeMatters-Screenshot5.png" alt="Cube Spawner image">
-                    
                 </div>
+                <button class="carousel-button prev">&#10094;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
