--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project One | Your Name</title>
+    <title>Simple Shooter | Ishan Goel</title>
     <link rel="stylesheet" href="project-styles.css">
 </head>
 
@@ -67,7 +67,7 @@
         <section class="links">
             <h2>Demo</h2>
             <div class="link-buttons">
-                <a href="https://youtu.be/YOUR_DEMO" target="_blank" class="btn btn-demo">
+                <a href="https://youtu.be/ZuuodcCul5k?si=zbjtSwOxxH0HAKQz" target="_blank" class="btn btn-demo">
                     <span>Watch Demo</span>
                 </a>
             </div>
