--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project One | Your Name</title>
+    <title>Size Matters | Ishan Goel</title>
     <link rel="stylesheet" href="project-styles.css">
 </head>
 
